fix: fix z-index header

--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -170,6 +170,7 @@
   &-pets {
     position: fixed;
     top: 0;
+    z-index: 100;
 
     width: 100%;
 
